# Auto-Instrument-Control

./: CMakeLists.txt  DG4202.c  DG4202.h  LICENSE  README.md  main.cpp  serial.c
Auto-Instrument-Control (Previous)/: DG4202.c  main.c
Oscilloscope/: DS2202A.cpp  DS2202A.h  Oscillo.cpp  Oscillo.h
SignalGenerator/: DG4202.cpp  DG4202.h  SigGen.cpp  SigGen.h
